@@ -76,21 +76,55 @@ cmd_system_description(struct lldpctl_conn_t *conn, struct writer *w,
 	return 1;
 }
 
+static int
+cmd_update_descriptions(struct lldpctl_conn_t *conn, struct writer *w,
+    struct cmd_env *env, void *arg)
+{
+	lldpctl_atom_t *config = lldpctl_get_configuration(conn);
+	if (config == NULL) {
+		log_warnx("lldpctl", "unable to get configuration from lldpd. %s",
+		    lldpctl_last_strerror(conn));
+		return 0;
+	}
+	if (lldpctl_atom_set_int(config,
+		lldpctl_k_config_ifdescr_update,
+		arg?1:0) == NULL) {
+		log_warnx("lldpctl", "unable to %s interface description update: %s",
+		    arg?"enable":"disable",
+		    lldpctl_last_strerror(conn));
+		lldpctl_atom_dec_ref(config);
+		return 0;
+	}
+	log_info("lldpctl", "interface description update %s",
+	    arg?"enabled":"disabled");
+	lldpctl_atom_dec_ref(config);
+	return 1;
+}
+
 /**
  * Register `configure system` commands.
  *
  * Those are the commands to configure protocol-independant stuff.
  */
 void
-register_commands_configure_system(struct cmd_node *configure)
+register_commands_configure_system(struct cmd_node *configure,
+    struct cmd_node *unconfigure)
 {
 	struct cmd_node *configure_system = commands_new(
 		configure,
 		"system", "System configuration",
 		cmd_check_no_env, NULL, "ports");
+	struct cmd_node *unconfigure_system = commands_new(
+		unconfigure,
+		"system", "System configuration",
+		cmd_check_no_env, NULL, "ports");
 	struct cmd_node *configure_interface = commands_new(
 		configure_system,
-		"interface", "Configure interface related items",
+		"interface", "Interface related items",
+		NULL, NULL, NULL);
+	struct cmd_node *unconfigure_interface = commands_new(
+		unconfigure_system,
+		"interface", "Interface related items",
 		NULL, NULL, NULL);
 
 	commands_new(
@@ -122,4 +156,18 @@ register_commands_configure_system(struct cmd_node *configure)
 			NULL, cmd_store_env_value, "iface-pattern"),
 		NEWLINE, "Set active interface pattern",
 		NULL, cmd_iface_pattern, NULL);
+
+	commands_new(
+		commands_new(configure_interface,
+		    "description", "Update interface descriptions with neighbor name",
+		    NULL, NULL, NULL),
+		NEWLINE, "Update interface descriptions with neighbor name",
+		NULL, cmd_update_descriptions, "enable");
+	commands_new(
+		commands_new(unconfigure_interface,
+		    "description", "Don't update interface descriptions with neighbor name",
+		    NULL, NULL, NULL),
+		NEWLINE, "Don't update interface descriptions with neighbor name",
+		NULL, cmd_update_descriptions, NULL);
 }
+
